src/components/Hero/Hero.scss
@use '../../_shared.scss';

.hero {
  display: flex;
  justify-content: space-between;
  // justify-content: center;
  // gap: 25px;
  margin: 0 shared.$desktop-margin 100px shared.$desktop-margin;
  padding-top: 150px;
  &__separator {
    height: auto;
    width: 15px;
    background-color: shared.$flash-color;
    @media all and (max-width: 1068px) {
      display: none;
    }
  }
  @media all and (max-width: 1000px) {
    flex-direction: column;
    gap: 30px;
  }
  @media all and (max-width: 600px) {
    margin: 30px shared.$mobile-margin;
    padding-top: 75px;
  }
  &__informations {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    max-width: 50%;
    @media all and (max-width: 1000px) {
      max-width: 100%;
      text-align: center;
    }
    &__btn {
      display: flex;
      font-weight: 600;
      @media all and (max-width: 1000px) {
        justify-content: center;
      }
    }
    &__h2title {
      margin-bottom: 37px;
      // margin: 0;
    }
  }
  &__image__container {
    display: flex;
    justify-content: center;
    align-items: center;
    max-width: 45%;
    @media all and (max-width: 1000px) {
      max-width: 100%;
    }
    &__image__profil {
      object-fit: cover;
      border-radius: 9999px;
      width: 400px;
      height: 400px;
      max-width: 400px;
      max-height: 400px;
      @media all and (max-width: 1275px) {
        width: 300px;
        height: 300px;
      }
      @media all and (max-width: 1000px) {
        width: 300px;
        height: 300px;
      }
      @media all and (max-width: 380px) {
        width: 250px;
        height: 250px;
      }
    }
  }
}

h1 {
  font-size: 3.5rem;
  // font-size: clamp(1rem, 3.5rem, 3.5rem);
  font-weight: 700;
  // margin-bottom: 37px;
  margin-top: 0;
  // text-shadow: 1px 0px 0px shared.$flash-color;
  & span {
    display: inline-block;
  }
  @media all and (max-width: 1275px) {
    font-size: 2.5rem;
  }
}

@media (prefers-reduced-motion: no-preference) {
  .hero__separator {
    transform: scaleY(0);
    transform-origin: top;
    animation: separator-animation 0.5s linear forwards;
  }
  h1 {
    opacity: 0;
    transform: translateY(-20px);
    animation: title-animation 0.5s 0.3s cubic-bezier(0.17, 0.67, 0.83, 0.67)
      forwards;
    & span {
      opacity: 0;
      transform: translateY(-20px);
      animation: title-animation 0.5s 0.5s cubic-bezier(0.17, 0.67, 0.83, 0.67)
        forwards;
    }
  }
  .hero__informations {
    &__h2title,
    &__btn {
      opacity: 0;
      transform: translateX(-5px);
      animation: slide-animation 0.6s 0.6s cubic-bezier(0.17, 0.67, 0.83, 0.67)
        forwards;
    }
    &__btn {
      animation: slide-animation 0.6s 0.8s cubic-bezier(0.17, 0.67, 0.83, 0.67)
        forwards;
    }
  }

  .hero__image__container__image__profil {
    opacity: 0;
    animation: opacity 0.3s 1s cubic-bezier(0.17, 0.67, 0.83, 0.67) forwards;
  }
}

@keyframes separator-animation {
  to {
    transform: scaleY(1);
  }
}

@keyframes title-animation {
  to {
    transform: translateY(0);
    opacity: 1;
  }
}

@keyframes slide-animation {
  to {
    transform: translateX(0);
    opacity: 1;
  }
}

@keyframes opacity {
  to {
    opacity: 1;
  }
}

